song page meta data, links, and tracklist component

--- a/data/songs/born-in-the-sunset-thoughts-to-oasis.mdx
+++ b/data/songs/born-in-the-sunset-thoughts-to-oasis.mdx
@@ -1,19 +1,19 @@
 ---
-title: 'Born in the Sunset: Thoughts to Oasis'
+title: 'Born in the Sunset: Thoughts to Oasis - EP'
 published: 'true'
 type: 'album'
 artist: "Jacob's Blue"
 written: 'J. Medure'
 produced: 'J. Medure'
 released: '2020-12-31'
-album: 'Born in the Sunset: Thoughts to Oasis'
-albumLink: ' '
+album: 'Born in the Sunset: Thoughts to Oasis - EP'
+albumLink: ''
 description: 'An album about the sunset'
 track: ''
 artwork: '/cover-art/BITS.jpg'
 alt: 'song art'
 spotifyEmbed: 'album/3nAER17uMf2QOuJwSCIOJB'
-explicit: 'E'
+explicit: 'true'
 links:
   [
     'https://open.spotify.com/album/3nAER17uMf2QOuJwSCIOJB?si=hS-He9BwRomfBTJPv9FKww&nd=1',
@@ -22,134 +22,98 @@ links:
     'https://music.amazon.com/albums/B08RGD1X5Q',
     'https://listen.tidal.com/album/167571026',
     'https://soundcloud.com/jacobsblue/sets/born-in-the-sunset-thoughts-to-oasis?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing',
+    'https://jacobsblueshop.gumroad.com/l/bits?_gl=1*1ildzno*_ga*MTk5NjIwMjA1NC4xNjkxNzk1MDc4*_ga_6LJN6D94N6*MTY5ODE4ODIzMS44LjEuMTY5ODE4ODMwNy4wLjAuMA..',
   ]
 ---
 
+My debut Album
+
 # Tracklist
 
-<div className="divide-y flex flex-col w-full border-y not-prose mb-8">
-  <Link href="/songs/hard-of-hearing">
-    <div className="flex items-center justify-between group hover:cursor-pointer py-2">
-      <div className="flex items-center space-x-2">
-        <p className="text-neutral-400">1</p>
-        <p>Hard of Hearing</p>
-      </div>
-      <span className="material-icons text-lg text-neutral-400 group-hover:text-white">
-        east
-      </span>
-    </div>
-  </Link>
-  <Link href="/songs/down-the-hill">
-    <div className="flex items-center justify-between group hover:cursor-pointer py-2">
-      <div className="flex items-center space-x-2">
-        <p className="text-neutral-400">2</p>
-        <p>Down the Hill</p>
-      </div>
-      <span className="material-icons text-lg text-neutral-400 group-hover:text-white">
-        east
-      </span>
-    </div>
-  </Link>
-  <Link href="/songs/knew-better">
-    <div className="flex items-center justify-between group hover:cursor-pointer py-2">
-      <div className="flex items-center space-x-2">
-        <p className="text-neutral-400">3</p>
-        <p>Knew Better</p>
-      </div>
-      <span className="material-icons text-lg text-neutral-400 group-hover:text-white">
-        east
-      </span>
-    </div>
-  </Link>
-  <Link href="/songs/i-cant-shake-you">
-    <div className="flex items-center justify-between group hover:cursor-pointer py-2">
-      <div className="flex items-center space-x-2">
-        <p className="text-neutral-400">4</p>
-        <p>(I can't) shake you</p>
-      </div>
-      <span className="material-icons text-lg text-neutral-400 group-hover:text-white">
-        east
-      </span>
-    </div>
-  </Link>
-  <Link href="/songs/fiya">
-    <div className="flex items-center justify-between group hover:cursor-pointer py-2">
-      <div className="flex items-center space-x-2">
-        <p className="text-neutral-400">5</p>
-        <p>Fiya</p>
-      </div>
-      <span className="material-icons text-lg text-neutral-400 group-hover:text-white">
-        east
-      </span>
-    </div>
-  </Link>
-  <Link href="/songs/on-my-pixies-shit">
-    <div className="flex items-center justify-between group hover:text-white hover:cursor-pointer py-2">
-      <div className="flex items-center space-x-2">
-        <p className="text-neutral-400">6</p>
-        <p>On My Pixies Shit</p>
-      </div>
-      <span className="material-icons text-lg text-neutral-400 group-hover:fill-white">
-        east
-      </span>
-    </div>
-  </Link>
-  <Link href="/songs/two-yellow-birds">
-    <div className="flex items-center justify-between group hover:cursor-pointer py-2 my-0">
-      <div className="flex items-center space-x-2">
-        <p className="text-neutral-400">7</p>
-        <p>Two Yellow Birds</p>
-      </div>
-      <span className="material-icons text-lg text-neutral-400 group-hover:text-white">
-        east
-      </span>
-    </div>
-  </Link>
+<div className="flex-wrap space-y-2 no-underline not-prose">
+  <Tracklist
+    order="1"
+    label="Hard of Hearing"
+    explicit="true"
+    time="4:14"
+    href="./hard-of-hearing"
+  />
+  <Tracklist
+    order="2"
+    label="Down the Hill"
+    explicit="true"
+    time="1:34"
+    href="./down-the-hill"
+  />
+  <Tracklist
+    order="3"
+    label="Knew Better"
+    explicit="true"
+    time="2:45"
+    href="./knew-better"
+  />
+  <Tracklist
+    order="4"
+    label="I can't (shake you)"
+    time="0:26"
+    href="./i-cant-shake-you"
+  />
+  <Tracklist order="5" label="Fiya" time="2:30" href="./fiya" />
+  <Tracklist
+    order="6"
+    label="On My Pixies Shit"
+    time="1:18"
+    explicit="true"
+    href="./on-my-pixies-shit"
+  />
+  <Tracklist
+    order="7"
+    label="Two Yellow Birds"
+    time="4:02"
+    href="./two-yellow-birds"
+  />
 </div>
 
-## Album Credits
+## Written + Produced
 
-<div className="album-credits flex-col w-full not-prose justify-start">
-  <div className="credit flex-auto flex-grow">
-    <h4>written + produced</h4>
-    <p>Jacob Medure</p>
-  </div>
-  <div className="credit flex-auto flex-grow">
-    <h4>Mixed</h4>
-    <p>Alex "Matik" Estevez @ Case de Llama | Brooklyn, NY</p>
-  </div>
-  <div className="credit flex-auto flex-grow">
-    <h4>mastered</h4>
-    <p>Nicolas de Porcel @ Million Dollar Snare | Sacramento, CA</p>
-  </div>
-  <div className="credit flex-auto flex-grow">
-    <h4>creative direction + design</h4>
-    <p>Jacob Medure</p>
-  </div>
-  <div className="credit flex-auto flex-grow">
-    <h4>web development</h4>
-    <p>Jacob Medure + Will Hanlen</p>
-  </div>
-  <div className="credit flex-auto flex-grow">
-    <h4>published</h4>
-    <p>LIVEINEVERYNOW. Records</p>
-  </div>
-  <div className="credit flex-auto flex-grow">
-    <h4>released</h4>
-    <p>Dec 31, 2020</p>
-  </div>
-  <div className="credit flex-auto flex-grow">
-    <h4>PRO</h4>
-    <p>ASCAP</p>
-  </div>
-  <div className="credit flex-auto flex-grow">
-    <h4>thanks + additional credits</h4>
-    <p>
-      Will Hanlen, Dean Maola, Zeke Mishanec, GVosti, Ashton Maxey and Robin
-      Lemmerz
-    </p>
-  </div>
-</div>
+Jacob Medure
+
+## Mixed
+
+Alex "Matik" Estevez @ Case de Llama | Brooklyn, NY
+
+## Mastered
+
+Nicolas de Porcel @ Million Dollar Snare | Sacramento, CA
+
+## Recorded
+
+The Backwood Apartment, Flushing, NY, and Charlie's Closet, Jacksonville, FL
+
+## Creative Direction + Design
+
+Jacob Medure
+
+## Web Development
+
+Jacob Medure + Will Hanlen
+
+## Published
+
+LIVEINEVERYNOW. Records
+
+## Released
+
+Dec 31, 2020
+
+## PRO
+
+ASCAP
+
+## Thanks + Additional Credits
+
+Will Hanlen, Dean Maola, Zeke Mishanec, GVosti, Ashton Maxey and Robin
+Lemmerz
 
 ## More
 
