--- a/data/articles/jb-a.mdx
+++ b/data/articles/jb-a.mdx
@@ -9,7 +9,7 @@ image: ''
 youtube: '_XxKCaopsQc'
 alt: 'gif'
 isPublished: 'true'
-color: 'bg-gray-500'
+toc: []
 ---
 
 <div className="flex-block md:flex space-y-3 md:space-y-0 md:space-x-4 not-prose tracking-tight my-4 mb-6 p-6 border border-blue-400 mt-8 bg-blue-50/50 rounded-2xl">
