--- a/data/songs/born-in-the-sunset-thoughts-to-oasis.mdx
+++ b/data/songs/born-in-the-sunset-thoughts-to-oasis.mdx
@@ -12,7 +12,6 @@ description: 'An album about the sunset'
 track: ''
 artwork: '/cover-art/BITS.jpg'
 alt: 'song art'
-spotifyEmbed: 'album/3nAER17uMf2QOuJwSCIOJB'
 explicit: 'true'
 links:
   [
@@ -25,8 +24,6 @@ links:
     'https://jacobsblueshop.gumroad.com/l/bits?_gl=1*1ildzno*_ga*MTk5NjIwMjA1NC4xNjkxNzk1MDc4*_ga_6LJN6D94N6*MTY5ODE4ODIzMS44LjEuMTY5ODE4ODMwNy4wLjAuMA..',
   ]
 ---
-
-My debut Album
 
 # Tracklist
 
@@ -117,10 +114,12 @@ Lemmerz
 
 ## More
 
-<MoreLinkBlog
-  href="https://web.archive.org/web/20220730230234/https://jacobs.blue/"
-  label="Born in the Sunset Experience"
-  year="2020"
-  alt="born in the susnet website preview"
-  src="/BITS.gif"
-/>
+<div className="not-prose">
+  <ArchiveEntry
+    href="https://web.archive.org/web/20220730230234/https://jacobs.blue/"
+    label="Born in the Sunset Experience"
+    year="2020"
+    alt="born in the susnet website preview"
+    src="/BITS.gif"
+  />
+</div>
