--- a/data/songs/template.mdx
+++ b/data/songs/template.mdx
@@ -8,11 +8,10 @@ produced: 'J. Medure'
 released: '2022-07-31'
 album: ''
 albumLink: ''
-track: ' '
-description: ' yes'
+track: ''
+description: ''
 artwork: '/1.gif'
 alt: 'song art'
-spotifyEmbed: 'track/7z19aMKlIaGNB3GfUmj6M2'
 explicit: 'true'
 links:
   [
