--- a/data/articles/orchids.mdx
+++ b/data/articles/orchids.mdx
@@ -9,6 +9,7 @@ image: ''
 youtube: ''
 alt: 'gif'
 isPublished: 'false'
+toc: []
 ---
 
 <div className="flex-block md:flex space-y-3 md:space-y-0 md:space-x-4 not-prose tracking-tight my-4 mb-6 p-6 border border-blue-400 mt-8 bg-blue-50/50 rounded-2xl">
