--- a/data/songs/born-in-the-sunset-thoughts-to-oasis.mdx
+++ b/data/songs/born-in-the-sunset-thoughts-to-oasis.mdx
@@ -10,7 +10,7 @@ album: 'Born in the Sunset: Thoughts to Oasis - EP'
 albumLink: ''
 description: 'An album about the sunset'
 track: ''
-artwork: '/cover-art/BITS.jpg'
+artwork: '/cover-art/bits.jpg'
 alt: 'song art'
 explicit: 'true'
 links:
