--- a/data/songs/down-the-hill.mdx
+++ b/data/songs/down-the-hill.mdx
@@ -10,7 +10,7 @@ album: 'Born in the Sunset: Thoughts to Oasis -  EP'
 albumLink: 'born-in-the-sunset-thoughts-to-oasis'
 description: ''
 track: '2'
-artwork: '/cover-art/BITS.jpg'
+artwork: '/cover-art/bits.jpg'
 alt: 'song art'
 explicit: 'true'
 links:
