--- a/data/songs/on-my-pixies-shit.mdx
+++ b/data/songs/on-my-pixies-shit.mdx
@@ -10,7 +10,7 @@ album: 'Born in the Sunset: Thoughts to Oasis'
 albumLink: 'born-in-the-sunset-thoughts-to-oasis'
 track: '6'
 description: ''
-artwork: '/cover-art/BITS.jpg'
+artwork: '/cover-art/bits.jpg'
 alt: 'song art'
 spotifyEmbed: 'track/7tNHEt5SMDrUtxHyLiyjR9'
 explicit: 'true'
