--- a/data/songs/fiya.mdx
+++ b/data/songs/fiya.mdx
@@ -10,7 +10,7 @@ album: 'Born in the Sunset: Thoughts to Oasis'
 albumLink: 'born-in-the-sunset-thoughts-to-oasis'
 track: '5'
 description: ''
-artwork: '/cover-art/BITS.jpg'
+artwork: '/cover-art/bits.jpg'
 alt: 'song art'
 spotifyEmbed: 'track/5rh5FpPR92DyNpx2v9u5TG'
 explicit: ''
