--- a/data/songs/hard-of-hearing.mdx
+++ b/data/songs/hard-of-hearing.mdx
@@ -10,7 +10,7 @@ album: 'Born in the Sunset: Thoughts to Oasis'
 albumLink: 'born-in-the-sunset-thoughts-to-oasis'
 track: '1'
 description: ''
-artwork: '/cover-art/BITS.jpg'
+artwork: '/cover-art/bits.jpg'
 alt: 'song art'
 spotifyEmbed: 'track/7z19aMKlIaGNB3GfUmj6M2'
 explicit: 'e'
