--- a/data/songs/knew-better.mdx
+++ b/data/songs/knew-better.mdx
@@ -10,7 +10,7 @@ album: 'Born in the Sunset: Thoughts to Oasis'
 albumLink: 'born-in-the-sunset-thoughts-to-oasis'
 track: '3'
 description: ' '
-artwork: '/cover-art/BITS.jpg'
+artwork: '/cover-art/bits.jpg'
 alt: 'song art'
 spotifyEmbed: 'track/3gpCWNwTX0wp2lWUwJLrWC'
 explicit: 'true'
