--- a/data/songs/two-yellow-birds.mdx
+++ b/data/songs/two-yellow-birds.mdx
@@ -10,7 +10,7 @@ album: 'Born in the Sunset: Thoughts to Oasis'
 albumLink: 'born-in-the-sunset-thoughts-to-oasis'
 track: '7'
 description: ''
-artwork: '/cover-art/BITS.jpg'
+artwork: '/cover-art/bits.jpg'
 alt: 'song art'
 explicit: 'true'
 links:
