--- a/data/designs/colophon.mdx
+++ b/data/designs/colophon.mdx
@@ -10,6 +10,7 @@ youtube: ''
 alt: ''
 isPublished: 'true'
 toc: []
+status: ''
 ---
 
 Like myself, Jacobs.Blue is a constant work in progress.
@@ -29,8 +30,12 @@ Jacobs.blue was designed primarily as an [anti-feed](https://jacobs.blue/design/
 
 ### Project status taxonomy
 
-yeo
+Yet another work in progress biased towards action...
 
 ## Next
 
 Jacobs.Blue evolves as I do.
+
+## Inspirations
+
+I would be remissed if I didn't mention all the exceptional designers sharing their work that helped shaped this project. Ranging from small to very large sources of inspiration, Jacobs.Blue would not exist in it's current from without the following. Thank you for your work [Maggie Appleton](https://maggieappleton.com/), [Jordan Singer](https://ibuildmyideas.com/), [Eike Drescher](https://www.eikedrescher.com/) [Marco Cornacchia](https://www.marco.fyi/), [Paco Coursey](https://paco.me/), [Rauno Freiberg](https://rauno.me/), [Rikitesh Nighot](https://nighot.com/), [Brian Lovin](https://brianlovin.com/), [Joseph Zhang](https://www.josephz.me/), [Ethan](https://area.cx), [Sebastian](https://www.carlhauser.com/).
