--- a/data/designs/jb-main-card-updates.mdx
+++ b/data/designs/jb-main-card-updates.mdx
@@ -10,6 +10,7 @@ youtube: ''
 alt: 'gif'
 isPublished: 'false'
 toc: []
+status: ''
 ---
 
 If I acknowledge that working on music everyday and treating my work like
