--- a/data/designs/jacobs-blue.mdx
+++ b/data/designs/jacobs-blue.mdx
@@ -10,6 +10,7 @@ youtube: ''
 alt: ''
 isPublished: 'true'
 toc: []
+status: ''
 ---
 
 {/* I don't like having my attention constantly vied for. I don't like the idea of making art with a playlist in mind. I don't like the idea of more of my time being taken from me then intended. */}
