--- a/data/articles/maybe-i-give-up.mdx
+++ b/data/articles/maybe-i-give-up.mdx
@@ -5,7 +5,7 @@ title: 'Maybe I give up.'
 description: '670 days since I released music.'
 thumbnail: '/miguThumb.png'
 tags: []
-image: '/cover-art/migu.jpg'
+image: ''
 youtube: '_XxKCaopsQc'
 alt: 'gif'
 isPublished: 'true'
