--- a/data/designs/colophon.mdx
+++ b/data/designs/colophon.mdx
@@ -1,7 +1,7 @@
 ---
 date: '2023-10-25'
-updated: ''
-title: 'About Jacobs.Blue'
+updated: '2023-10-27'
+title: 'About jacobs.blue (Colophon)'
 description: 'How to'
 thumbnail: ''
 tags: []
@@ -9,28 +9,56 @@ image: ''
 youtube: ''
 alt: ''
 isPublished: 'true'
-toc: []
-status: ''
+toc: [how-to, project-status, next]
+status: 'draft'
+version: ''
 ---
+
+[jacobs.blue 1.0](https://jacobs.blue/archive) served as my debut album release landing page. The UX was dedicated to quickly getting inbound users to their streaming preference of choice then secondarily allow users to explore the story telling experience dedicated to Born in the Sunset. It was built with vanilla html css and javascript in 2020.1
+
+[jacobs.blue 2.0](https://jacobs.blue/archive) went live in 2022 and established the anti-feed, to which many resonated.
 
 Like myself, Jacobs.Blue is a constant work in progress.
 
-In hopes to carve out my own representative corner of the internet. Overt two years ago I set out to build this thing.
-
-I hoped to create a space...
+In hopes to carve out my own representative corner of the internet. Over two years ago I set out to build a space
 
 - where I could make anything and quickly share it.
 - that was a fluid enough to support any creative format yet robust enough for a person to intuitively navigate.
 - that was to my UX preferences and experiments.
 - that not only considers a user's time and privacy but actively takes an anti-predatory stance towards both ends.
 
+Some principles that guide how this site came to be
+
+**Bias towards action**
+
+The vast majority of my output has been seen by very few people. In effort to confront my perfectionist tendencies
+
+**Zero downtime**
+
+No “under construction” or “we’ll be back later” sign means friends, family, listeners, fellow interneters, prospective collaborators, and future employers always have access to an up to date version of my work. Staying up-to-date leads me to my next principle.
+
+**Easily managed**
+
+The site’s content is built with Next.js using a couple JSON files and many MDX files. It’s easy for me to write content directly in VS Code, and push changes directly to main in very little time.
+
 ## How to
 
 Jacobs.blue was designed primarily as an [anti-feed](https://jacobs.blue/design/anti-feed)
 
-### Project status taxonomy
+### Project status
 
 Yet another work in progress biased towards action...
+
+<div className="flex w-full aspect-video rounded-lg bg-neutral-50 overflow-clip border border-black/10 items-center">
+  <div className="relative mx-auto mb-12 w-96 items-center aspect-square">
+    <Image
+      src="/design/status.svg"
+      alt="status symbols for jacobs.blue 3 symbols denoting idea draft and polished"
+      style={{ objectFit: 'cover' }}
+      fill
+    />
+  </div>
+</div>
 
 ## Next
 
