--- a/data/designs/creating-w-care.mdx
+++ b/data/designs/creating-w-care.mdx
@@ -10,7 +10,8 @@ youtube: ''
 alt: 'gif'
 isPublished: 'true'
 toc: []
-status: 'Draft'
+status: 'draft'
+version: 1
 ---
 
 Up until this point I had never used themes on a site. So when I was starting my [latest idea](https://createwcare.com) I wanted to take the opportunity to not only use light and dark modes but inlist multiple themes.
