--- a/data/designs/jacobs-blue.mdx
+++ b/data/designs/jacobs-blue.mdx
@@ -11,6 +11,7 @@ alt: ''
 isPublished: 'true'
 toc: []
 status: ''
+version: 1
 ---
 
 {/* I don't like having my attention constantly vied for. I don't like the idea of making art with a playlist in mind. I don't like the idea of more of my time being taken from me then intended. */}
