--- a/data/designs/jb-main-card-updates.mdx
+++ b/data/designs/jb-main-card-updates.mdx
@@ -10,7 +10,8 @@ youtube: ''
 alt: 'gif'
 isPublished: 'false'
 toc: []
-status: ''
+status: 'draft'
+version: 1
 ---
 
 If I acknowledge that working on music everyday and treating my work like
