Essay Status Update

--- a/data/designs/colophon.mdx
+++ b/data/designs/colophon.mdx
@@ -10,8 +10,8 @@ youtube: ''
 alt: ''
 isPublished: 'true'
 toc: [how-to, project-status, next]
-status: 'draft'
-version: ''
+status: 'Essay'
+version: 1
 ---
 
 [jacobs.blue 1.0](https://jacobs.blue/archive) served as my debut album release landing page. The UX was dedicated to quickly getting inbound users to their streaming preference of choice then secondarily allow users to explore the story telling experience dedicated to Born in the Sunset. It was built with vanilla html css and javascript in 2020.1
