--- a/data/designs/jb-main-card-updates.mdx
+++ b/data/designs/jb-main-card-updates.mdx
@@ -8,9 +8,9 @@ tags: []
 image: ''
 youtube: ''
 alt: 'gif'
-isPublished: 'false'
+isPublished: 'published'
 toc: []
-status: 'draft'
+status: Essay
 version: 1
 ---
 
