--- a/data/designs/colophon.mdx
+++ b/data/designs/colophon.mdx
@@ -16,11 +16,11 @@ version: 1
 
 Like myself, jacobs.blue is a constant work in progress. It's an attempt at being the best representation of my work, my art, my interests and thoughts at any given time.
 
-With the exception of many rounds of feedback from many great designers and a cheeky JSON CMS made by my good friend, I designed and built this site myself. All of it is open source and can be found on [github](https://github.com/jmedure).
+Without the feedback of many great designers and the cheeky JSON CMS my good friend built and hooked up for me, jacobs.blue would not exist. Other than these contributions I designed and built this site myself. All of it is open source and can be found on [github](https://github.com/jmedure).
 
 In 2020 [jacobs.blue 1.0](https://jacobs.blue/archive) was built with vanilla HTML, CSS and Javascript in order to promote and showcase my debut album. The UX was simple, direct and optimized for getting inbound users (mainly from instagram) to their preferred streaming service quickly. This was an awesome site but didn’t age beyond my next release. It was more of landing page and I wanted more of a home for jacobs.blue.
 
-In hopes to carve out my own representative corner of the internet. Over two years ago I set out to build that home. What you see now is a culmination of that work.
+In hopes to carve out my own representative corner of the internet, _and greatly test my dev skills_, over two years ago I set out to build that home. What you see now is a culmination of that work.
 
 I intended to make a space that met the following criteria
 
@@ -67,17 +67,14 @@ The primary function of jacobs.blue is a feed of work. As a user, I should be ab
 
 You’ll notice a typewriter effect subheader on the main page. This component is my version of a [Now page](https://nownownow.com/about), streamlined for my own uses. I regularly update this component with what I’m up-to, including but not limited to training for a marathon and recently becoming a father - woohoo!
 
-<div className="pt-8 pb-4">
-  <div className="relative rounded-lg w-full aspect-video bg-neutral-50 overflow-clip border border-black/10 justify-end border-solid items-end">
-    <div className="flex items-center align-right justify-end w-full h-full z-10">
-      <Image
-        src="/design/subheader.png"
-        alt="Probably cooking something demonstration of streamlined subheader. Mocked up over desktop"
-        objectFit="cover"
-        fill
-        blur
-      />
-    </div>
+<div className="pt-6 pb-2">
+  <div className="relative bottom-0 object-top-left sm:object-cover border rounded-lg bg-neutral-50 w-full h-full aspect-video border-black/10  overflow-hidden">
+    <Image
+      src="/design/subheader.png"
+      alt="Probably cooking something demonstration of streamlined subheader. Mocked up over desktop"
+      objectFit="cover"
+      fill
+    />
   </div>
   <figcaption className="w-full align-middle text-center text-neutral-400 font-jbd">
     Subheader located top left on index
@@ -96,22 +93,11 @@ I spent entirely too much on “blog” parts of my site. These pages are really
 
 Similar to [Maggie Appleton](https://maggieappleton.com/colophon#growth-stages), despite regularly updating this site I'm also bad at finishing things. In the name of biasing towards action I came up with a taxonomy for a written works “doneness” so-to-speak, in order to push un-refined thoughts worth-sharing.
 
-<div className="pt-8 pb-4">
-  <div className="rounded-lg aspect-video  bg-neutral-50 overflow-clip border border-black/10 justify-center border-solid items-center">
-    <div className="flex items-center align-middle justify-center w-full h-full z-10">
-      <Image
-        src="/design/status.svg"
-        alt="status symbols for jacobs.blue 3 symbols denoting idea draft and polished"
-        width={400}
-        height={400}
-        blur
-      />
-    </div>
-  </div>
-  <figcaption className="w-full align-middle text-center text-neutral-400 font-jbd">
-    I designed these myself using Material UI
-  </figcaption>
-</div>
+<BlogImage
+  src="/design/status.svg"
+  alt="status symbols for jacobs.blue 3 symbols denoting idea draft and polished"
+  fig=" I designed these myself using Material UI"
+/>
 
 Essays start as WIPs, become Drafts, and finish as Essays.
 
@@ -126,6 +112,10 @@ I would be remissed if I didn't mention all the exceptional designers sharing th
 Making this site has made me more comfortable being all the things I am under one umbrella. Social media has made me feel like I'm _only_ a musician, but in the real world I am many things. Jacobs.blue is not only a good representation of this but helped me own it. Like myself, jacobs.blue is a constant work in progress. Expect jacobs.blue to evolve and change shape as much as I do.
 
 If you’ve made it this far please share some feedback either on [twitter](https://twitter.com/jacobs__blue) or [email me](mailto:jake@jacobs.blue?subject=Wus%20cracking%20big%20dawg?) directly.
+
+# Kilt babies
+
+Designing is something I get paid to do, developing is a budding hobby of mine. All versions of jacobs.blue are also a reflection of my dev skill. Knowing that I wanted
 
 **WIP (Work in progress.)**
 
